Syntax error fix
Fixed a syntax error in _main.scss

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -536,7 +536,8 @@ COMMENT STYLES
 	} // end .commentlist .comment-reply-link  
 
 } // end .commentlist  
-
+}
+    
 /*********************
 COMMENT FORM STYLES
 *********************/
