Styles for post sorting and organization
Added basic styles for post status "buttons."  Also moved a number of require_once functions and external scripts to core.php, as they should be included on every site, foreseeably.

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -343,6 +343,29 @@ POSTS & CONTENT STYLES
 		height: auto;
 	}
 } 
+.post-sort {
+    cursor: pointer;
+    &.asc {
+        &:after {
+            width: 0;
+            height: 0;
+            border-bottom: 11px solid #999;
+            display: inline-block;
+            margin-left: 8px;
+            border-top-style: none;
+        } 
+    }
+    &:after {
+        content: '';
+        width: 0;
+        height: 0;
+        border-left: 7px solid transparent;
+        border-right: 7px solid transparent;
+        border-top: 11px solid #999;
+        display: inline-block;
+        margin-left: 8px;
+    }
+}
 .wp-caption {
 	max-width: 100%;
 	background: #eee;
