--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -115,6 +115,11 @@ GENERAL STYLES
 	}
 }
 
+html {
+	width: 100%;
+	overflow-x: hidden;
+}
+
 /*********************
 LINK STYLES
 *********************/
@@ -238,8 +243,8 @@ POSTS & CONTENT STYLES
 	position: fixed;
 	top: 0;
 	bottom: 0;
-	left: 0;
-	right: 0;
+	left: -25%;
+	right: -25%;
 	z-index: 1000;
 }
 .modal-content {
@@ -248,6 +253,10 @@ POSTS & CONTENT STYLES
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
+	max-width: 100%;
+	max-width: 100vw;
+	max-height: 100%;
+	max-height: 100vh;
 	text-transform: center;
 	z-index: 2;
 	.close-x {
