--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -238,9 +238,6 @@ NAVIGATION STYLES
 POSTS & CONTENT STYLES
 *********************/
 
-.vc_row {
-	margin: 0 !important;
-}
 .modal{
 	display: none;
 	position: fixed;
@@ -354,7 +351,13 @@ POSTS & CONTENT STYLES
 		max-width: 100%;
 		height: auto;
 	}
-} 
+}
+.vc_row {
+	margin: 0 !important;
+	&:not(.inner-row) {
+		
+	}
+}
 .post-sort {
     cursor: pointer;
     &.asc {
@@ -817,6 +820,7 @@ PLUGIN STYLES
 		line-height: inherit;
 		color: inherit !important;
 		cursor: inherit;
+		padding: 10px;
 	}
 	img {
 		display: none;
