Added loading icons
Added loading icons to images folder and set the preloader to use that by default

--- a/assets/css/preloader.css
+++ b/assets/css/preloader.css
@@ -5,7 +5,7 @@
 	width: 100vw;
 	height: 100vh !important;
 	background-color: #232121;
-	background-image: url('../../images/preloader.gif');
+	background-image: url('../../images/loading_icon.gif');
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: auto 50vh;
