--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -380,6 +380,7 @@ POSTS & CONTENT STYLES
 			border-top: 11px solid #999;
 			display: inline-block;
 			margin-left: 8px;
+			margin-right: 10px;
 		}
 	}
 }
