--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -200,10 +200,16 @@ NAVIGATION STYLES
 }
 
 .hamburger-menu-wrap {
-	display: inline-block;
-	height: 30px;
-	line-height: 30px;
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 100000;
+	height: 44px;
+	line-height: 21px;
 	cursor: pointer;
+	background-color: #888;
+	padding: 10px;
 	* {
 		cursor: pointer;
 	}
@@ -957,6 +963,49 @@ MEDIA QUERIES
 	
 }
 @include breakpoint(medium down) {
+	.top-sidebar {
+		display: none;
+		position: fixed;
+		top: 44px;
+		left: 0;
+		z-index: 10;
+		width: 100%;
+		max-height: 100vh;
+		max-height: calc(100vh - 44px);
+		background-color: $xdblue;
+		text-align: left;
+		padding: 10px 4px;
+		&.active {
+			display: block;
+		}
+		.menu-primary-nav-container {
+			.menu-item {
+				width: 100%;
+				a {
+					padding-left: 12px;
+					padding-right: 12px;
+				}
+			}
+		}
+	}
+	.hamburger-menu-wrap {
+		display: inline-block;
+	}
+	.hamburger-menu {
+		&.active {
+			background-color: transparent;
+			&:before {
+				-webkit-transform: rotate(45deg);
+				bottom: 0;
+				transform: rotate(45deg);
+			}
+			&:after {
+				-webkit-transform: rotate(-45deg);
+				top: 0;
+				transform: rotate(-45deg);
+			}
+		}
+	}
 	
 }
 @include breakpoint(767px down) {
