--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /******************************************************************
-Theme Name: JointsWP - Sass
+Theme Name: Keystone
 Theme URI: http://www.jointswp.com
 Description: 
-Author: Your Name Here
-Author URI: http://www.yoururlhere.com
+Author: Nessit
+Author URI: http://nessit.net
 Version: 4.0
 License: GNU General Public License & MIT
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
